trying to resolve contrast errors

--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -14,6 +14,7 @@ body {
     padding: 20px;
     color: white;
     text-align: center;
+    font-size: 1.2em;
 }
 
 h1, h2, h3, h4 {
@@ -59,6 +60,7 @@ nav {
     width: 100%;
     grid-column: 1/-1;
     border-bottom: 2px solid #CED3DC;
+    font-size: 1.2em;
 }
 
 .menu {
@@ -205,7 +207,7 @@ footer p {
 }
 
 footer a {
-    color: #EC4E20;
+    color: #ff0000;
 }
 
 .info {
